vlib/v/parser/tests/unknown_module_suggestion.out
vlib/v/parser/tests/unknown_module_suggestion.vv:7:8: error: unknown module `zz`.
6 possibilities: `math`, `os`, `term`, `zm`, `zo`, `zt`.
    5 | fn f[T]() int { return 42 }
    6 | 
    7 | a := f[zz.Coord]()
      |        ~~
    8 | dump(a)
