vlib/v/parser/tests/unknown_module_suggestion.vv
import term as zt
import os as zo
import math as zm

fn f[T]() int {
	return 42
}

a := f[Coord]()
dump(a)
